# clbtype

./: .gitignore  CMakeLists.txt  README.md  query_db.sh
db/: IHE3034_pks_island_genes.fasta  db.fasta  variant_info.tsv
db/genes/: clbS-like_4ce09a.faa  clbS-like_4ce09a.fna  clbS-like_56e764.fna  clbS-like_cb4bca.fna  clbS-like_cd711d.fna
